Update de Ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,26 @@
 /tuMejorOpcion.logic/target/
 /tuMejorOpcion.web/target/
 /tuMejorOpcion.mock/target/
+.idea/copyright/profiles_settings.xml
+
+.idea/.name
+
+.idea/compiler.xml
+
+.idea/encodings.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/scopes/scope_settings.xml
+
+.idea/TuMejorOpcionGen.iml
+
+.idea/vcs.xml
+
+.idea/workspace.xml
+
+crudmaker.web/nbactions.xml
+
+crudmaker.web/nbactions.xml
