--- a/tuMejorOpcion.logic/pom.xml
+++ b/tuMejorOpcion.logic/pom.xml
@@ -48,5 +48,12 @@
       		<artifactId>tuMejorOpcion.api</artifactId>
       		<version>0.0.1-SNAPSHOT</version>
     	</dependency>
+        
+        <dependency> 
+            <groupId>org.mongodb</groupId> 
+            <artifactId>mongo-java-driver</artifactId> 
+            <version>2.12.4</version> 
+        </dependency>
     </dependencies>
+    
 </project>
